# project-canens

./: .env.example  .gitignore  Cargo.toml  LICENSE-MIT  README.md  Shuttle.toml  build.rs  index.html  index.scss  manifest.json  project-canens-158be6e427bf8b1f.js  project-canens-158be6e427bf8b1f_bg.wasm  service_worker.js
.github/workflows/: continuous_deployment.yml  continuous_integration.yml  shuttle.yml
backend/: Cargo.toml  vercel.json
backend/api/: main.rs  spotify.rs
backend/api/spotify/: search.rs  song.rs
backend/src/: error.rs  main.rs  spotify.rs
backend/src-rs/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: .env.example  Cargo.toml  index.scss
frontend/src/: app.rs  backend.rs  error.rs  external_button.rs  fretmap.rs  main.rs  navbar.rs  spotify.rs
frontend/src/hooktheory/: mod.rs
frontend/src/search/: mod.rs
frontend/src/song/: card.rs  info.rs  mod.rs  page.rs
frontend/src/tabs/: mod.rs  scraper.rs
src/: app.rs  error.rs  external_button.rs  fretmap.rs  home.rs  hooktheory.rs  main.rs  search_bar.rs  search_results.rs  song.rs  song_card.rs  song_info.rs  song_search.rs  spotify.rs
src/hooktheory/: mod.rs
src/search/: mod.rs  results.rs  search_bar.rs
src/song/: card.rs  info.rs  mod.rs
src/tabs/: scraper.rs
