[package]
name = "project-canens"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
form_urlencoded = "1.2.1"
input_yew = "0.1.10"
itertools = "0.13.0"
rspotify = { version = "0.13.2", features = ["env-file"] }
wasm-bindgen-test = "0.3.42"
yew = { version="0.21.0", features=["csr"] }
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["HtmlInputElement"] }
implicit-clone = "0.4.9"
gloo-console = "0.3.0"
