[package]
name = "project-canens-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
vercel_runtime = "1.1.4"
tokio = "1.38.0"
vercel_runtime_macro = "1.1.4"
url = "2.5.2"
tap = "1.0.1"
serde_json = "1.0.120"
once_cell = "1.19.0"
http = "1.1.0"
tower-http = { version = "0.5.2", features = ["cors", "auth", "set-header"] }
tower = "0.4.13"
rspotify = { version = "0.13.2", features = ["dotenvy"] }
reqwest = { version = "0.12.5", features = ["json"] }

[[bin]]
name = "main"
path = "api/main.rs"
