[package]
name = "project-canens-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-runtime = "0.47.0"
shuttle-axum = "0.47.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = { version = "0.7.5", features = ["json"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
serde = { version = "1.0.204", features = ["derive"] }
rspotify = "0.13.2"
anyhow = "1.0.86"
project-canens-common = { path = "../common" }
serde_json = "1.0.127"
