[package]
name = "project-canens"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
form_urlencoded = "1.2.1"
input_yew = "0.1.10"
itertools = "0.13.0"
rspotify = "0.13.2"
wasm-bindgen-test = "0.3.42"
yew = { version="0.21.0", features=["csr"] }
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["HtmlInputElement"] }
implicit-clone = "0.4.9"
wasm-logger = "0.2.0"
log = "0.4.21"
yew-hooks = "0.3.2"
yew-router = "0.18.0"
anyhow = "1.0.86"
num_enum = "0.7.2"
derive_more = "0.99.17"
metadata-filter = "0.3.0"
deunicode = "1.6.0"
reqwest = "0.12.4"
serde_urlencoded = "0.7.1"
scraper = "0.19.0"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
stats-ci = "0.1.1"
ordered-float = "4.2.0"
gloo-net = "0.5.0"
tap = "1.0.1"
regex = "1.10.5"

[build-dependencies]
rspotify = { version = "0.13.2", features = ["env-file"]}

[profile.dev]
incremental = true
